--- a/projeto_android/index.html
+++ b/projeto_android/index.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Android</title>
     <link rel="stylesheet" href="estilos/style.css">
-    <link rel="shortcut icon" href="imagens/favicon.ico" type="image/x-icon">
+    <a href="">
+        <link rel="shortcut icon" href="imagens/favicon.ico" type="image/x-icon">
+    </a>
 </head>
 <body>
     <header>
@@ -14,10 +16,10 @@
         <p>Tudo aquilo que você sempre quis saber sobre o mundo Tech, em um único lugar</p>
 
         <ul>
-            <li>Home</li>
-            <li>Notícias</li>
-            <li>Curiosidades</li>
-            <li>Fale Conosco</li>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Notícias</a></li>
+            <li><a href="#">Curiosidades</a></li>
+            <li><a href="#">Fale Conosco</a></li>
         </ul>
     </header>
     <section>
