--- a/projeto_android/index.html
+++ b/projeto_android/index.html
@@ -23,7 +23,7 @@
         </ul>
     </header>
     <section>
-        <main>
+        <main class="conteudo">
             <h2>História do Mascote do Android</h2>
 
             <p>Provavelmente você sabe que o sistema operacional <strong>Android</strong>, mantido pelo <strong>Google</strong> é um dos mais utilizados para dispositivos móveis em todo o mundo. Mas tavez você não saiba que o seu simpático mascote tem um nome e uma história muito curiosa? Pois acompanhe esse artigo para aprender muita coisa sobre esse robozinho.</p>
