--- a/projeto_android/index.html
+++ b/projeto_android/index.html
@@ -32,9 +32,9 @@
 
             <p>A primeira tentativa de criar um mascote surgiu em 2007 e veio de um desenvolvedor chamado <a href="https://androidcommunity.com/dan-morrill-shows-us-the-android-mascot-that-almost-was-20130103/" target="_blank">Dan Morrill</a>. Ele conta que abriu o <a href="https://inkscape.org" target="_blank">Inkscape</a> (software livre para vetorização de imagens) e criou sua própria versão de robô. O objetivo era apenas personificar o sistema apenas para a a sua equipe, não existia nenhuma solicitação da empresa para a criação de um mascote.</p>
 
-            <section class="imagem" id="dandroids">
-
-            </section>
+            <div class="imagem" id="dandroids">
+                <img src="imagens/pequenho.png" alt="dandroids">
+            </div>
 
             <p>Essa primeira versão bizarra até foi batizada em homenagem ao seu criador: seriam os <strong>Dandroids</strong>.</p>
 
@@ -42,20 +42,22 @@
 
             <p>A ideia de ter um mascote foi amadurecendo e a missão foi passada para uma profissional da área. A ilustradora Russa <a href="https://www.irinablok.com" target="_blank">Irina Blok</a>, também funcionária do <strong>Google</strong>, ficou com a missão de representar o pequeno robô de uma maneira mais agradável.</p>
 
-            <section class="imagem" id="irina">
-
-            </section>
+            <div class="imagem" id="irina">
+                <img src="imagens/irina-blok-pq.jpg" alt="irina Blok">
+            </div>
 
             <p>A ideia principal da Irina era representar tudo graficamente com poucos traços e de forma mais chapada. O desenho também deveria gerar identificação rápida com quem o olha. Surgiu então o <strong>Bugdroid</strong>, o novo mascote do <strong>Android</strong>.</p>
 
-            <section class="imagem" id="Bugdroid">
-
-            </section>
+            <div class="imagem" id="Bugdroid">
+                <img src="imagens/bugdroid.png" alt="Bugdroid">
+            </div>
 
             <p>A principal inspiração para os traços do novo Bugdroid veio daqueles bonequinhos que ilustram portas de banheiro para indicar o gênero de cada porta. Conta a lenda que a artista estava criando em sua mesa no escritório do Google e olhou para o lado dos banheiros e a identificação foi imediata: simples, limpo, objetivo.</p>
 
             <section class="video">
+                <div>
 
+                </div>
             </section>
             
             <section class="extra">
@@ -82,11 +84,11 @@
             </section>
 
             <p>Então é isso! Espero que você tenha gostado do nosso artigo com essa curiosidade sobre o sistema Android e seu simpático mascote.</p>
-                    
-            <footer>
-                <p>Site criado por <a href="https://www.instagram.com/ronaldo_filh0/" target="_blank">Ronaldo Filho</a> para o <a href="https:/cursoemvideo.com" target="_blank">CursoemVideo</a></p>
-            </footer>
+
         </main>
+        <footer>
+            <p>Site criado por <a href="https://www.instagram.com/ronaldo_filh0/" target="_blank">Ronaldo Filho</a> para o <a href="https:/cursoemvideo.com" target="_blank">CursoemVideo</a></p>
+        </footer>
     </section>
 </body>
 </html>
